Working extraction spike